refacto: Mise en place de la doc + refacto des classes du jeu